--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <style>
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
+
 .pace {
   -webkit-pointer-events: none;
   pointer-events: none;
@@ -177,7 +178,7 @@
                       <li> Fluffy unicorns?&#x1f984 Nope &#x1F601(We’re extremely sorry for that.)
                     </ol>
                     <br>
-                    <p>So what are you waiting for? Scroll down to see what makes associating with us a worthwhile option!</p>
+                    <p>So what are you waiting for?!</p>
                     <br>
                   </div>
                 </div>
@@ -186,7 +187,13 @@
                   <i class="fa extra fa-phone fa-4x" style="color:#33cc33;opacity:0.8" aria-hidden="true"></i>
                 </div>
                   <div class="col-lg-4 no-gutters thumb">
-                      Aditya Dewan <br>Mudit Rathore <br>Anurag Bharadwaj
+                      Aditya Dewan <br><span style="font-size:0.9em;
+                  ">946544919</span>
+                  <br>
+                  Mudit Rathore<br>
+                  <span style="font-size:0.9em;"> 9452385937 </span><br>Anurag Bharadwaj<br> 
+                  <span style="font-size:0.9em;">78400857048
+                  </span>
                   </div>
                   <div class="col-lg-1">
                     <span class="brochure"> <i class="fa fa-download fa-4x" aria-hidden="true" style="color:grey"></i></span>
@@ -1072,9 +1079,6 @@ jQuery(function($) {
       window.open('Effervescence_17.pdf','_blank');
     });
     var s = skrollr.init();
-      if (s.isMobile()) {
-          window.location='mobile/index.html';
-      }
 });
 $("#demo01").animatedModal( {
   animatedIn:'lightSpeedIn',
