--- a/mobile/index.html
+++ b/mobile/index.html
@@ -242,7 +242,13 @@
                         <i class="fa extra fa-phone fa-4x" style="color:#33cc33;opacity:0.8" aria-hidden="true"></i>
                      </div>
                      <div class="col-sm-6 thumb">
-                        Aditya Dewan <br>Mudit Rathore <br>Anurag Bharadwaj
+                        Aditya Dewan <br><span style="font-size:0.9em;
+                  ">946544919</span>
+                  <br>
+                  Mudit Rathore<br>
+                  <span style="font-size:0.9em;"> 9452385937 </span><br>Anurag Bharadwaj<br> 
+                  <span style="font-size:0.9em;">78400857048
+                  </span>
                      </div>
                   </div>
                   <div class="row">
