--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src='js/jquery.js'></script>
 <script src="./js/pace.js"></script>
       <link  rel="stylesheet" href="./css/pace.css">
-      <script>pace.start()</script>
+      <script>Pace.restart()</script>
 <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="http://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 <script src="http://use.fontawesome.com/6c299f74e9.js"></script>
