--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html >
 <head>
+<meta name="author" content="CosmicCoder96">
+    <meta name="description" content="Official teaser of Effervescence 17, organized by IIITA">
+    <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Effervescence</title>
+    <meta name="viewport" content="initial-scale=1.0">
   <script src='js/jquery.js'></script>
 <script src="./js/pace.js"></script>
       <link  rel="stylesheet" href="./css/pace.css">
