CA model complete

--- a/index.html
+++ b/index.html
@@ -238,49 +238,29 @@
                   <div class="col thumb">
                     <hr id="two" data-symbol="">
                     <p>
-                    Heading on to associate with us? At Effervescence we believe to serve the purpose, and to deliver more than the expectations. 
+                    So, what is a Campus Ambassador? 
                     </p>
                     <br>
-                    <p>
-                    We make sure that we carry on the legacy of trust and promise put on us by our partners and sponsors. Let’s see a glimpse of what we provide: 
-                    </p>
+                   Campus Ambassadors are representatives of all the colleges participating in Effervescence. They play a pivotal role in providing maximum coverage for the fest, by spreading the word amongst their peers through various social media and providing a medium for communication between their institution and IIITA. 
+With time, each Campus Ambassador becomes an integral part of the Effervescence family, and are regularly in touch with the team operating in IIITA. Each CA is tasked with providing maximum publicity, both offline and online, of Effe in their respective institution and encourage active participation from students of all years.
+
                     <br>
+                    <p>The perks of being the awesome Effervescence CA</p>
                     <ol>
-                      <li> Deliverables as per requirement? Yes!
-                      <li> Budget-friendly deals? Of course!
-                      <li> Regular updates about the events and festival? Definitely!
-                      <li> Fluffy unicorns?&#x1f984 Nope &#x1F601(We’re extremely sorry for that.)
+                      <li> Certificate? Yes!
+                      <li>  Free Official Effe Merchandise.? Of course!
+                      <li> R. Gold passes and campus entry? Definitely!
+                      <li> Goodies and free passes? Apply already
                     </ol>
-                    <br>
                     <p>So what are you waiting for?!</p>
                     <br>
+                     
                   </div>
                 </div>
                 <div class="row">
-                <div class="col-lg-1 ">
-                  <i class="fa extra fa-phone fa-4x" style="color:#33cc33;opacity:0.8" aria-hidden="true"></i>
+                <div class="col-lg-12 text-center">
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOxKPjQSJsB-EsOEM6b3vPkEZV1arukqz5cmImYAQiF67R_A/viewform" style="text-decoration:none"><i class="fa extra fa-bolt fa-4x" style="color:#33cc33;opacity:0.8" aria-hidden="true"></i><br>Apply Now!!</a>
                 </div>
-                  <div class="col-lg-4 no-gutters thumb">
-                      Aditya Dewan <br><span style="font-size:0.9em;
-                  ">946544919</span>
-                  <br>
-                  Mudit Rathore<br>
-                  <span style="font-size:0.9em;"> 9452385937 </span><br>Anurag Bharadwaj<br> 
-                  <span style="font-size:0.9em;">78400857048
-                  </span>
-                  </div>
-                  <div class="col-lg-1">
-                    <span class="brochure"> <i class="fa fa-download fa-4x" aria-hidden="true" style="color:grey"></i></span>
-                  </div>
-                  <div class="col-lg-3 no-gutters thumb">
-                  <span class="brochure" >Download <br>  Brochure</span>
-                  </div>
-                  <div class="col-lg-1  no-gutters ">
-                  <span class="previous-sponsor"> <i class="fa fa-gg fa-3x" style="color:#e60000" aria-hidden="true"></i></span>
-                  </div>
-                  <div class="col-lg-2 no-gutters thumb">
-                  <span class="previous-sponsor"> Previous <br>sponsors</span>
-                  </div>
                 </div>
               </div>
               
