make form open in new tab

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ With time, each Campus Ambassador becomes an integral part of the Effervescence 
                 </div>
                 <div class="row">
                 <div class="col-lg-12 text-center">
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOxKPjQSJsB-EsOEM6b3vPkEZV1arukqz5cmImYAQiF67R_A/viewform" style="text-decoration:none"><i class="fa extra fa-bolt fa-4x" style="color:#33cc33;opacity:0.8" aria-hidden="true"></i><br>Apply Now!!</a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOxKPjQSJsB-EsOEM6b3vPkEZV1arukqz5cmImYAQiF67R_A/viewform" target="_blank" style="text-decoration:none"><i class="fa extra fa-bolt fa-4x" style="color:#33cc33;opacity:0.8" aria-hidden="true"></i><br>Apply Now!!</a>
                 </div>
                 </div>
               </div>
