--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ With time, each Campus Ambassador becomes an integral part of the Effervescence 
                     <ol>
                       <li> Certificate? Yes!
                       <li>  Free Official Effe Merchandise.? Of course!
-                      <li> R. Gold passes and campus entry? Definitely!
+                      <li>Gold passes and campus entry? Definitely!
                       <li> Goodies and free passes? Apply already
                     </ol>
                     <p>So what are you waiting for?!</p>
