znet live logo added

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 <div id="benny2"></div>
 <div id="benny3"></div>
 <div id="clouds"></div>
-
+<div id="znet-live">
+</div>
 <div id="call-1">
 
 </div>
